# athena-ogl-engine

./: .gitmodules  CMakeLists.txt  README.md
assets/Shaders/: Deferred.frag.glsl  Deferred.vert.glsl  Lighting.frag.glsl  Lighting.vert.glsl  Screen.frag.glsl  Screen.vert.glsl  ShadowMap.vert.glsl  Simple.frag.glsl  Simple.vert.glsl  Skybox.frag.glsl  Skybox.vert.glsl
src/: Main.cpp
src/Core/: Application.cpp  Application.h  Core.h  Log.h  Ref.h  Window.cpp  Window.h
src/Core/Event/: Event.h  KeyEvents.h  MouseEvents.h  WindowEvents.h
src/Core/ImGui/: ImGuiRenderer.cpp  ImGuiRenderer.h
src/Core/Input/: Input.h  KeyCode.h  MouseCode.h
src/Core/Memory/: MemoryTracker.cpp  MemoryTracker.h
src/Renderer/: Cubemap.cpp  Cubemap.h  DeferredRenderer.cpp  DeferredRenderer.h  Framebuffer.cpp  Framebuffer.h  IndexBuffer.cpp  IndexBuffer.h  Material.h  MaterialLibrary.cpp  MaterialLibrary.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  TextureLibrary.cpp  TextureLibrary.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Renderer/Camera/: Camera.cpp  Camera.h  EditorCamera.cpp  EditorCamera.h
src/Renderer/Light/: Light.h
src/Renderer/Scene/: Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Skybox.cpp  Skybox.h
